# claude-dev-documentation-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: clarification.md  friction-report.md  new-example.md
docs/: documentation-approach.md
examples/: README.md
examples/forward-pipeline-bookshelf-stats/: ADR-0007-sql-view-for-monthly-aggregation.md  ADR-0008-chart-library-choice.md  PLAN-0002-reading-stats-pipeline.md  README.md  REQ-0003-monthly-stats-dashboard.md  TASKS-excerpt.md  TASKS.md
examples/reactive-pipeline-timezone-bug/: ADR-0012-timezone-aware-month-buckets.md  README.md  SCN-0007-finished-date-timezone.md  TASKS-excerpt.md  TASKS.md
templates/: CLAUDE.md  README.md  TASKS.md
templates/docs/: README.md
templates/docs/decisions/: ADR-template.md  README.md
templates/docs/knowledge/: README.md
templates/docs/plans/: PLAN-template.md  README.md
templates/docs/requirements/: README.md  REQ-template.md
tools/docgraph/: .gitignore  README.md  corpora.toml.example  pyproject.toml
tools/docgraph/src/docgraph/: __init__.py  cli.py  config.py  db.py  graph.py  indexer.py  mcp_server.py  migrate.py  models.py  parser.py  paths.py  query.py  search.py  validate.py  watcher.py
tools/docgraph/tests/: test_chain_walk.py  test_kb_typed_artifacts.py  test_legacy_text_titles.py  test_m2_edge_model.py  test_migrate.py  test_migrate_energyflow.py  test_parse_errors_validator.py  test_smoke.py  test_tasks_parser.py
tools/docgraph/tests/fixtures/synthetic/: TASKS.md
(+5 files in other folders)
