[project]
name = "docgraph"
version = "0.1.0"
description = "Typed-graph + FTS5 query layer for the claude-dev-documentation-framework. CLI + MCP server."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Tanguy Caillet" }]
license = { text = "CC-BY-4.0" }
dependencies = [
    "fastmcp>=3.2.4",
    "pydantic>=2.11.3",
    "python-frontmatter>=1.1.0",
    "watchdog>=6.0.0",
]

[project.scripts]
docgraph = "docgraph.cli:main"
docgraph-mcp = "docgraph.mcp_server:main"
docgraph-migrate-adr-tasks = "docgraph.migrate:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
